2011-01-03  Glenn Morris  <rgm@gnu.org>

	* sieve-manage.el (sieve-manage-open): Correctly set sieve-manage-port.

	* sieve.el (sieve-open-server): Give a more explicit error if
	sieve-manage-open returns nil.  (Bug#7720)

2011-01-02  Karl Fogel  <kfogel@red-bean.com>

	* gnus-msg.el (gnus-message-replyencrypt): Default to `t'.

2011-01-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-login): Prefer AUTH=CRAM-MD5, if it's available.
	This avoids sending passwords in plain text over non-encrypted
	channels.

	* shr.el (shr-rescale-image): Display all GIF images as animated images.

	* nnimap.el (nnimap-login): Refactored out into own function, and
	implement CRAM-MD5.
	(nnimap-wait-for-line): Refactored out.

	* mm-view.el (mml-smime): Require.

2010-12-20  David Engster  <deng@eml.cc>

	* mm-view.el (mm-view-pkcs7-decrypt): If mml-smime-use is set to 'epg,
	use EPG to decrypt S/MIME messages instead of openssl.

2011-01-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-group): Avoid double SELECT on `M-g'.

	* gnus-group.el (gnus-group-kill-group): Don't try to update the group
	status is the group clearly is unreachable.

	* auth-source.el (auth-source-create): Add the optional second
	parameter to `local-variable-p' to be compatible with XEmacs.

2011-01-02  Wang Diancheng  <dcwang@kingbase.com.cn>  (tiny change)

	* nnml.el (nnml-request-article): Allow requesting by Message-ID to
	work when using a compressed nnml folder.

2011-01-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-select-newsgroup): Don't propagate marks to
	backends after sanitising on entry, because this never makes sense:
	If the articles have gone missing, then the data no longer exists on
	the backend, and if they haven't, then Gnus is wrong, and shouldn't
	overwrite anything anyway.

	* shr.el (shr-insert-document): Bind shr-width dynamically to
	window-width if it's nil.

2010-12-30  Tassilo Horn  <tassilo@member.fsf.org>
